WebContent/style/base_ucn.css
/* ... */
#banner h1 span {
	border-bottom:1px solid #4E6F9E;
}
#banner a:link, #banner a:hover, #banner a:visited, #banner a:active {
	color:#FDFDFD;
	text-decoration:none;
}
#banner p {
	color:#D0DCEE;
	letter-spacing:0.1em;
}
#tabset_tabs li {
	background:#DADDE3 url(../images/tab-tl.png) no-repeat scroll left top;
	border-bottom:1px solid #CBD0DB;
}
#tabset_tabs li.selected {
	background:#EAEBEE url(../images/round-tl.png) no-repeat scroll left top;
	border-bottom:1px solid #EAEBEE;
}
#tabset_tabs li a {
	outline: 0;
	font-weight:bold;
	background:#DADDE3 url(../images/tab-tr.png) no-repeat scroll right top;
}
#tabset_tabs li a:hover {
	text-decoration:none;
}
#tabset_tabs li.selected a {
	background:#EAEBEE url(../images/round-tr.png) no-repeat scroll right top;
	color:#1F2126;
}
p.instructions, span#task_descrip {
	color:#4D525E;
}
#fields {
	background:#EAEBEE url(../images/round-tr.png) no-repeat scroll right top;
}
#fields, #menu {
	background-color:#EAEBEE;
}
fieldset div.input, fieldset div.options, fieldset div.submit {
	background:url(../images/double.png) repeat-x scroll left top;
	border-top:1px solid #CBCDD5;
}
fieldset div.submit input {
	background:url(../images/button.png) no-repeat scroll left 1px;
}
#don_program {
	border:1px solid #55B05A;
}
#footer p.copyright {
	color:#7C8395;
}
#footer p.copyright a:link, #footer p.copyright a:visited {
	color:#A3756E;
}
#messages {
	font-size:0.9em;
	margin:1.1em 2.2em;
}
#messages .error, #messages .warning, #messages .info {
	padding:0.7em;
	border:2px solid;
	margin:0.6em 0;
}
#messages .error {
	color:#8A1F11;
	border-color:#FBC2C4;
	background:#FBE3E4;
}
#messages .warning {
	color:#514721;
	border-color:#ffe57d;
	background:#FFF6BF;
}
#messages .info {
	color:#11438a;
	border-color:#c2dafb;
	background:#e3edfa;
}
#messages .error h4, #messages .warning h4, #messages .info h4 {
	line-height:22px;
	padding-left:30px;
}
#messages .error h4 {
	background:url(../images/icone_error_b.png) no-repeat scroll left top;
}
#messages .warning h4 {
	background:url(../images/icone_warning_b.png) no-repeat scroll left top;
}
#messages .info h4 {
	background:url(../images/icone_info_b.png) no-repeat scroll left top;
}
#messages .error pre {
	padding-top:0.6em;
}
#messages .pointer:hover h4 {
	text-decoration: underline;
}
#messages .pointer h4 {
	font-weight:bold;
}
/* Post-javascript */
fieldset.toggles legend {
	background:url(../images/arrow-closed.png) no-repeat scroll 0.2em 0.35em;
	padding-left:0.8em;
	cursor: pointer;
}
fieldset.toggled legend {
	background:#EAEBEE url(../images/arrow-open.png) no-repeat scroll 0 0.5em;
	padding-left:0.8em;
	cursor: pointer;
}
.pointer {
	cursor: pointer;
}

/* Result page */
#observations {
	font-size: 0.8em;
	margin:1em 2.5em;
}
#observations div.observer {
	margin-top: 0.5em;
}
#observations div.observer h2 {
	font-size: 1.3em;
	padding: 0.3em;
	padding-left: 0.5em;
	text-align:left;
	color:white
}
#observations div.observer h2 a {
	font-size: 0.9em;
	color:white;
}
#observations div.observer h2 a:hover {
	color:white;
}
#observations div.observer h2 a.direct_link {
	height:0;
	width:0;
	display:inline-block;
	overflow:hidden;
	padding:11px 0 0 12px;
	background:url(../images/external_link_2.gif) no-repeat;
}
#observations div.observer h2 a.anchor {
	height:0;
	width:0;
	display:inline-block;
	overflow:hidden;
	padding:1em 0 0 1.2em;
	background:url(../images/permalink.png) no-repeat 0.2em 0;
	vertical-align:-15%;
}
#observations div.observer h2 span.name {
	font-style: italic;
}
#observations div.observer h2 span.icons {
	float: right;
}
#observations div.observer h2 span.icons a {
	font-size:0.8em;
}
#observations div.observer h2 span.icons a:hover {
	text-decoration:none;
}
#observations div.observer h2 span.icons a span {
	background-repeat:no-repeat;
	background-position:3px 0;
	display:inline-block;
	overflow:hidden;
	height:0;
	width:0;
	padding:18px 25px 0 0;
	vertical-align:-20%;
}
#observations div.observer h2 span.icons a.infos span {
	background-image:url(../images/icone_info.png);
}
#observations div.observer h2 span.icons a.errors span {
	background-image:url(../images/icone_error.png);
}
#observations div.observer h2 span.icons a.warnings span {
	background-image:url(../images/icone_warning.png);
}
#observations div.observer h2 span.icons img {
	vertical-align: -20%;
	padding:0 0.2em;
}
#observations div.valid h2 {
	background-color:#1daa34;
	border: 1px solid #17882a;
}
#observations div.invalid h2 {
	background-color:#cc2323;
	border: 1px solid #aa1d1d;
}
#observations div.results {
	padding-left:0.5em;
	border-left:1px solid;
}
#observations div.valid div.results {
	border-color:#1daa34;
}
#observations div.invalid div.results {
	border-color:#cc2323;
}
#observations div.infos, #observations div.warnings, #observations div.errors {
	padding-top: 0;
}
#observations h3 {
	font-size: 1.1em;
	padding:0.3em 0 0.3em 0;
	border-bottom:1px solid #CCCCCC;
}
#observations h3 a.anchor {
	height:0;
	width:0;
	display:inline-block;
	overflow:hidden;
	padding:1.1em 0 0 2em;
	background:url(../images/permalink.gif) no-repeat 50% 50%;
	float:right;
}
#observations .infos h3 {
	color: #17882a;
}
#observations .errors h3 {
	color: #aa1d1d;
}
#observations .warnings h3 {
	color: #b48700;
}
#observations .results h3.pointer:hover {
	background-color:#f5f5f5;
} 
#observations td.uri {
	background-color:#EEEEEE;
	padding:0.4em;
}
#observations td.uri span {
	font-weight: bold;
}
#observations td.anchor {
	width:13px;
}
#observations td.anchor a {
	height:0;
	width:0;
	display:inline-block;
	overflow:hidden;
	padding:11px 0 0 11px;
	background:url(../images/permalink.gif);
}
#observations table {
	border-collapse:collapse;
	width:100%;
}
#observations table tr {
	border-collapse:collapse;
	border:1px solid #CCCCCC;
	border-left-width: 0;
}
#observations td, #observations th  {
	padding:3px 6px;
}
/* ... */

